added card section

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Legal Solution</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <link rel="stylesheet" href="./Tailwind/tailwind.css">
+    <link rel="stylesheet" href="./tailwind/tailwind.css">
 </head>
-<body class="max-w-1170 border-box">
+<body class="max-w-1170">
     <header>
         <nav class="max-w-1170 flex justify-around mt-10">
             <div><img src="./images/logo2.png" alt=""></div>
@@ -28,47 +28,54 @@
     </header>
 
     <main class=" justify-items-center  mt-[120px]">
-        <div>
-        <h3 class="text-4xl mb-[24px] font-extrabold decoration-[#707070]">The Legal Practice Area</h3>
-        <p>There are many variations of passages of Lorem Ipsum available, but the majority have<br>suffered alteration in some form, by injected humour.</p>
+    <div>
+          <h3 class="text-4xl mb-[24px] font-extrabold decoration-[#707070]">The Legal Practice Area</h3>
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have<br>suffered alteration in some form, by injected humour.</p>
     </div>
-    <section class="grid grid-cols-3 max-w-1170 min-h-[998px]">
-        <div>
+
+
+
+ <section>
+     <div class="grid grid-cols-3 max-w-[1170px] mt-[120px] h-[998px]">
+          
+        <div class="p-[71px] border-blue-600 border-4 w-[401px] h-[499px]">
             <img src="./images/business.png" alt="">
             <h3>Business Law</h3>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
             <img src="./images/Frame.png" alt="">
         </div>
-        <div>
+
+        <div class="p-[71px]">
             <img src="./images/criminal.png" alt="">
             <h3>Criminal Law</h3>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
             <img src="./images/Frame.png" alt="">
         </div>
-        <div>
+        <div class="p-[71px]">
             <img src="./images/child.png" alt="">
             <h3>Child Support</h3>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
             <img src="./images/Frame.png" alt="">
         </div>
-        <div>
+        <div class="p-[71px]">
             <img src="./images/education.png" alt="">
             <h3>Education Law</h3>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
             <img src="./images/Frame.png" alt="">
         </div>
-        <div>
+        <div class="p-[71px]">
             <img src="./images/divorce.png" alt="">
             <h3>Divorce Law</h3>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
             <img src="./images/Frame.png" alt="">
         </div>
-        <div>
+        <div class="p-[71px]">
             <img src="./images/tax.png" alt="">
             <h3>Tax Law</h3>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
             <img src="./images/Frame.png" alt="">
         </div>
+    </div>
     </section>
 
     </main>
